--- a/app/components/popup-arrange-viewing/nd-popup-arrange-viewing.scss
+++ b/app/components/popup-arrange-viewing/nd-popup-arrange-viewing.scss
@@ -71,4 +71,12 @@
       margin: 0 pxtovw(-10, 375);
     }
   }
+
+  .dates {
+    &__buttons {
+      @include screen('md', 2, max) {
+        display: none;
+      }
+    }
+  }
 }
