--- a/app/pages/host-account/host-account-settings-company.pug
+++ b/app/pages/host-account/host-account-settings-company.pug
@@ -30,7 +30,11 @@ block content
           +nd-side-navigation(nav, 'Settings')._profile._profile_ha
 
       +nd-content-main
-        +records._acc
+        +nd-section
+          +nd-section-header._fx._md-pg-head.nd-hide-sm
+            +nd-section-title._fz24 Account settings
+            +e.menu
+              +slider-navigation([{name: "Basic information", href: "host-account-settings-basic.html"}, {name: "Password", href: "host-account-settings-password.html"}, {name: "Company details", href: "host-account-settings-company.html"}, {name: "Notification settings", href: "host-account-settings-notifications.html"}], 2, 'Company details')
 
 block panels
 
