--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -90,6 +90,7 @@ block content
               +nd-link(href="rental-summary-signup.html") Spacepool - Rental Summary - Signup (rental-summary-signup.html)
               +nd-link(href="rental-summary-signup-confirmed.html") Spacepool - Rental Summary - Signup - Email Confirmed (rental-summary-signup-confirmed.html)
               +nd-link(href="rental-summary-login.html") Spacepool - Rental Summary - Login (rental-summary-login.html)
+              +nd-link(href="rental-summary-meeting.html") Spacepool - Rental Summary For Meeting Rooms (rental-summary-meeting.html)
           +e.group#nav-search
             +e.head
               +page-title Страницы Search
