--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -21,7 +21,6 @@
   z-index: 0;
   transition: transform $ease-main;
   transform-origin: 50% 50%;
-  overflow: hidden;
 
   @include screen('xlg', max, 2) {
     height: pxtovw(40, 1660);
@@ -51,29 +50,6 @@
     border-radius: pxtovw(20, 375);
   }
 
-  &::before {
-    @include pseudo;
-
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: var(--bgpos-x) 50%;
-    background-size: 200% 200%;
-    opacity: 0;
-    transition: opacity .25s ease;
-    background-image: linear-gradient(90.5deg, rgba(#0085ff, 0) 25.06%, #00b2ff 48.74%, rgba(#0085ff, 0) 74.96%);
-    will-change: background-position;
-    z-index: 0;
-  }
-
-  &:hover {
-    &::before {
-      opacity: 1;
-    }
-  }
-
   &:active {
     transform: scale(.96);
   }
@@ -96,6 +72,39 @@
     cursor: not-allowed;
     pointer-events: none;
     color: transparent;
+  }
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity $ease-main;
+
+    @include rule(border-radius, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+
+    #{$b}:hover & {
+      opacity: 1;
+    }
+
+    &::before {
+      @include pseudo;
+
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-position: var(--bgpos-x) 50%;
+      background-size: 200% 200%;
+      transition: opacity .25s ease;
+      background-image: linear-gradient(90.5deg, rgba(#0085ff, 0) 25.06%, #00b2ff 48.74%, rgba(#0085ff, 0) 74.96%);
+      will-change: background-position;
+    }
   }
 
   &__preloader {
@@ -441,6 +450,10 @@
       border-radius: pxtovw(15, 375);
       height: pxtovw(30, 375);
     }
+
+    #{$b}__bg {
+      @include rule(border-radius, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+    }
   }
 
   &_h32 {
@@ -465,6 +478,10 @@
     @include screen('sm', max, 2) {
       border-radius: pxtovw(16, 375);
       height: pxtovw(32, 375);
+    }
+
+    #{$b}__bg {
+      @include rule(border-radius, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
     }
 
     &_sm22 {
@@ -498,6 +515,10 @@
       border-radius: pxtovw(20, 375);
       height: pxtovw(35, 375);
     }
+
+    #{$b}__bg {
+      @include rule(border-radius, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    }
   }
 
   &_h60 {
@@ -522,6 +543,10 @@
     @include screen('sm', max, 2) {
       border-radius: pxtovw(20, 375);
       height: pxtovw(40, 375);
+    }
+
+    #{$b}__bg {
+      @include rule(border-radius, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 20));
     }
   }
 
@@ -558,7 +583,7 @@
       color: $nd-color-logo;
     }
 
-    &::before {
+    #{$b}__bg {
       display: none;
     }
 
