--- a/app/pages/rental-summary/rental-summary-login.pug
+++ b/app/pages/rental-summary/rental-summary-login.pug
@@ -13,6 +13,7 @@ block header
   - var pageClass = ' nd-page_nopad'
   - var isMap = false
   - var host = false
+  - var isNoUser = true
 
 block content
   - var spaceData = {gallery: { images: ["assets/images/nd/nd-space-lead.jpg", "assets/images/space2.jpg", "assets/images/space3.jpg", "assets/images/space4.jpg", "assets/images/space7.jpg"], buttons: true, buttonsClass: "_bg-small nd-hide-sm"}, address: ["London", "Mayfare", "EC2A 4SD"], tube: "Liverpool Street", title: "House of Creative - 229 Shoreditch High Street", offers: [{box: "_red", name: "FIXED DESK", rows: [{ name: "Fixed desk 1st floor", price: "£ 860.00 per month"}]}]}
