--- a/app/pages/signup/nd-signup-ready.pug
+++ b/app/pages/signup/nd-signup-ready.pug
@@ -11,6 +11,7 @@ block header
   - var pageClass = ''
   - var isMap = false
   - var host = false
+  - var isNoUser = true
 
 block content
   +nd-section
