--- a/app/blocks/datepicker/dates-table.scss
+++ b/app/blocks/datepicker/dates-table.scss
@@ -17,19 +17,19 @@
     line-height: 1.2;
     font-weight: 400;
     box-sizing: border-box;
-    padding-left: 10px;
+    text-align: center;
+    padding-left: 0;
 
     @include screen('xlg', max, 2) {
       font-size: pxtovw(17, 1660);
-      padding-left: pxtovw(10, 1660);
     }
 
     @include screen('lg', max, 2) {
       font-size: pxtovw(17, 1366);
-      padding-left: pxtovw(10, 1366);
     }
 
     @include screen('md', max, 2) {
+      text-align: left;
       font-size: pxtovw(17, 960);
       padding-left: pxtovw(10, 960);
     }
