--- a/app/blocks/scroll-form/scroll-form-v3.pug
+++ b/app/blocks/scroll-form/scroll-form-v3.pug
@@ -18,5 +18,5 @@ mixin scroll-form-v3()
     +nd-input-number({ name: 'count', value: 1 }).__counter
     +e.buttons
       +nd-button('a')(href="#").__button Request reservation
-      +nd-button('a')._black.__button Arrange viewing
+      +nd-button('a')._black.__button.js-nd-arrange-viewing(href="#nd-popup-arrange-viewing") Arrange viewing
     +e.note prices are exclusive of VAT
