--- a/app/components/offer-card/offer-card.pug
+++ b/app/components/offer-card/offer-card.pug
@@ -55,7 +55,7 @@ mixin offer-card-for-space(item, cls)
       +e.price!=(item.price.amount + ' <span class="offer-card__price-period" data-text="' + item.price.period + '" data-mobile-text="' + item.price.periodshort + '"></span>')
       +e.buttons(data-blind-zone)
         +nd-button()._sm-fz15.__button(href="#") Request reservation
-        +nd-button()._sm-fz15._black.__button(href="#") Arrange viewing
+        +nd-button()._sm-fz15._black.__button.js-nd-arrange-viewing(href="#nd-popup-arrange-viewing") Arrange viewing
 
 
 mixin offer-card-for-space-panel(data)
