--- a/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
+++ b/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
@@ -45,6 +45,6 @@ mixin nd-popup-arrange-viewing()
       .nd-container
         +e.calendar(data-dates-container)
         block
-    +nd-popup-footer
+    +nd-popup-footer()(data-dates-timeblock)
       .nd-container
         +arrange-viewing-form
