--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -298,6 +298,15 @@
         }
       }
     }
+
+    &_calendar2 {
+      @include rule(width, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+      @include rule(height, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+
+      &:not(:last-child) {
+        @include rule(margin-right, (xl: 9px, xlg: 9, lg: 9, md: 9, sm: 9));
+      }
+    }
   }
 
   &__type {
