--- a/app/components/main-menu/nd-main-menu.scss
+++ b/app/components/main-menu/nd-main-menu.scss
@@ -237,6 +237,28 @@
         }
       }
     }
+
+    &_mt70 {
+      &:not(:first-child) {
+        margin-top: 70px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(70, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(70, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(70, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(70, 375);
+        }
+      }
+    }
   }
 
   &__item {
