--- a/app/layouts/redesign-default.pug
+++ b/app/layouts/redesign-default.pug
@@ -32,7 +32,7 @@ html(lang='en')
     if !noHeader
       +nd-header(isHost)(class=addClass)
       +nd-user-menu-panel(isHost)
-      +nd-main-menu(menuData, isHost)
+      +nd-main-menu(menuData, isHost, noUser)
 
     +b.MAIN(class='nd-page' + pageCls)
       block content
