--- a/app/components/registration-form/registration-form.scss
+++ b/app/components/registration-form/registration-form.scss
@@ -302,10 +302,10 @@
       @include screen('sm', max, 2) {
         background-size: pxtovw(2, 375) pxtovw(2, 375);
       }
+    }
 
-      #{$b}:hover & {
-        background-image: linear-gradient($nd-color-main, $nd-color-main);
-      }
+    &:hover span {
+      background-image: linear-gradient($nd-color-main, $nd-color-main);
     }
   }
 
